--- a/services/Trader_Core/build.gradle
+++ b/services/Trader_Core/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'test'
-apply pulgin: 'war'
-apply plugin: 'jar'
+//apply plugin: 'test'
+apply plugin: 'war'
+//apply plugin: 'jar'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.apache.httpcomponents:httpclient:4.5.3"
+    compile "org.apache.httpcomponents:httpclient:4.5.3",
+            "net.sf.json-lib:json-lib:2.4:jdk15"
 }
