--- a/services/Trader_Core/build.gradle
+++ b/services/Trader_Core/build.gradle
@@ -10,5 +10,7 @@ repositories {
 
 dependencies {
     compile "org.apache.httpcomponents:httpclient:4.5.3",
-            "net.sf.json-lib:json-lib:2.4:jdk15"
+            "net.sf.json-lib:json-lib:2.4:jdk15",
+            "ws.wamp.jawampa:jawampa-core:0.5.0",
+            "ws.wamp.jawampa:jawampa-netty:0.5.0"
 }
